; ModuleID = '/home/carl/AnghaBench/linux/drivers/oprofile/extr_oprofile_perf.c_op_destroy_counter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/oprofile/extr_oprofile_perf.c_op_destroy_counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event = type { i32 }

@perf_events = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @op_destroy_counter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @op_destroy_counter(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.perf_event*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @perf_events, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.perf_event** @per_cpu(i32 %6, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.perf_event*, %struct.perf_event** %8, i64 %10
  %12 = load %struct.perf_event*, %struct.perf_event** %11, align 8
  store %struct.perf_event* %12, %struct.perf_event** %5, align 8
  %13 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %14 = icmp ne %struct.perf_event* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %17 = call i32 @perf_event_release_kernel(%struct.perf_event* %16)
  %18 = load i32, i32* @perf_events, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call %struct.perf_event** @per_cpu(i32 %18, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.perf_event*, %struct.perf_event** %20, i64 %22
  store %struct.perf_event* null, %struct.perf_event** %23, align 8
  br label %24

24:                                               ; preds = %15, %2
  ret void
}

declare dso_local %struct.perf_event** @per_cpu(i32, i32) #1

declare dso_local i32 @perf_event_release_kernel(%struct.perf_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
